tests/ui/deref-patterns/gate.stderr
error[E0308]: mismatched types
  --> $DIR/gate.rs:4:9
   |
LL |     match String::new() {
   |           ------------- this expression has type `String`
LL |         "" | _ => {}
   |         ^^ expected `String`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
